<resources>

    <!-- Primeros Platos -->

    <string name="p1">Patatas con chorizo</string>
    <string name="p2">Empanadillas de atún con tomate</string>
    <string name="p3">Enchiladas suizas</string>
    <string name="p4">Rollitos de verduras y queso </string>
    <string name="p5">Arroz negro con calamares</string>
    <string name="p6">Ensaladilla de patata y gambas</string>
    <string name="p7">Crema de marmitako </string>
    <string name="p8">Croquetas de salmón</string>
    <string name="p9">Fideos con verduras y costilla de cerdo</string>
    <string name="p10">Pastel de puerros</string>

    <!-- Segundos Platos -->

    <string name="s1">Macarrones con salmón</string>
    <string name="s2">Empanadillas de ajoarriero</string>
    <string name="s3">Pizza de pera, panceta y salchicha </string>
    <string name="s4">Filetes de redondo y coles de Bruselas</string>
    <string name="s5">Bacalao asado con salsa de txakoli</string>
    <string name="s6">Conejo al horno </string>
    <string name="s7">Albóndigas en salsa</string>
    <string name="s8">Filetes de pavo empanados</string>
    <string name="s9">Jabalí estofado </string>
    <string name="s10">Morros picantes </string>

    <!-- Postres -->

    <string name="pos1">Chocolate con churros de café</string>
    <string name="pos2">Natillas con churros</string>
    <string name="pos3">Copa de mango y chocolate blanco</string>
    <string name="pos4">Pudin de brioche y fruta</string>
    <string name="pos5">Quesada con mermelada de albaricoque</string>
    <string name="pos6">Tarta Sacher con mermelada</string>
    <string name="pos7">Flan de huevo</string>
    <string name="pos8">Torrija caramelizada</string>
    <string name="pos9">Flan de turrón </string>
    <string name="pos10">Bizcocho de chocolate sin gluten</string>

    <!-- Cafe -->

    <string name="c1">Café cortado</string>
    <string name="c2">Café moka</string>
    <string name="c3">Café</string>
    <string name="c4">Café suizo</string>
    <string name="c5">Chocolate</string>
    <string name="c6">Leche</string>


    <!-- Principal App -->

    <string name="app_name">RestaurantApp</string>
    <string name="title_activity_menu_principal">MenuPrincipalActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_menus__carta">Menus_CartaActivity</string>
    <string name="title_activity_maps">Map</string>
    <string name="title_activity_carrito">CarritoActivity</string>
    <string name="title_activity_primeros">PrimerosActivity</string>
    <string name="title_activity_segundos">SegundosActivity</string>
    <string name="title_activity_postres">PostresActivity</string>
    <string name="title_activity_cafe">CafeActivity</string>
</resources>
