<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".SegundosActivity"
    tools:showIn="@layout/app_bar_segundos"
    android:orientation="vertical">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="207dp">

                <android.support.v7.widget.CardView
                    xmlns:card_view="http://schemas.android.com/apk/res-auto"
                    android:id="@+id/card_p1"
                    android:layout_weight="1"
                    android:layout_height="200dp"
                    card_view:cardCornerRadius="4dp"
                    android:layout_marginLeft="3dp"
                    android:layout_marginBottom="3dp"
                    android:layout_marginRight="3dp"
                    android:layout_marginTop="6dp">

                    <ImageView
                        android:id="@+id/img1"
                        android:layout_width="match_parent"
                        android:layout_height="150dp"
                        android:scaleType="centerCrop" />
                    <TextView
                        android:layout_weight="1"
                        android:layout_height="50dp"
                        android:layout_width="match_parent"
                        android:text="@string/s1"
                        android:gravity="top"
                        android:paddingLeft="15dp"
                        android:layout_gravity="bottom"
                        android:textColor="@color/gris"
                        android:textStyle="bold"
                        android:textSize="16dp"
                        android:background="@color/veig"/>

                </android.support.v7.widget.CardView>
                <android.support.v7.widget.CardView
                    xmlns:card_view="http://schemas.android.com/apk/res-auto"
                    android:id="@+id/card_2"
                    android:layout_weight="1"
                    android:layout_height="200dp"
                    card_view:cardCornerRadius="4dp"
                    android:layout_marginLeft="3dp"
                    android:layout_marginBottom="3dp"
                    android:layout_marginRight="3dp"
                    android:layout_marginTop="6dp">

                    <ImageView
                        android:id="@+id/img2"
                        android:layout_width="match_parent"
                        android:layout_height="150dp"
                        android:scaleType="centerCrop" />
                    <TextView
                        android:layout_weight="1"
                        android:layout_height="50dp"
                        android:layout_width="match_parent"
                        android:text="@string/s2"
                        android:gravity="top"
                        android:paddingLeft="15dp"
                        android:layout_gravity="bottom"
                        android:textColor="@color/gris"
                        android:textStyle="bold"
                        android:textSize="16dp"
                        android:background="@color/veig"/>

                </android.support.v7.widget.CardView>
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="207dp">

                <android.support.v7.widget.CardView
                    xmlns:card_view="http://schemas.android.com/apk/res-auto"
                    android:id="@+id/card_p3"
                    android:layout_weight="1"
                    android:layout_height="200dp"
                    card_view:cardCornerRadius="4dp"
                    android:layout_marginLeft="3dp"
                    android:layout_marginBottom="3dp"
                    android:layout_marginRight="3dp"
                    android:layout_marginTop="6dp">

                    <ImageView
                        android:id="@+id/img3"
                        android:layout_width="match_parent"
                        android:layout_height="150dp"
                        android:scaleType="centerCrop" />
                    <TextView
                        android:layout_weight="1"
                        android:layout_height="50dp"
                        android:layout_width="match_parent"
                        android:text="@string/s3"
                        android:gravity="top"
                        android:paddingLeft="15dp"
                        android:layout_gravity="bottom"
                        android:textColor="@color/gris"
                        android:textStyle="bold"
                        android:textSize="16dp"
                        android:background="@color/veig"/>

                </android.support.v7.widget.CardView>
                <android.support.v7.widget.CardView
                    xmlns:card_view="http://schemas.android.com/apk/res-auto"
                    android:id="@+id/card_p4"
                    android:layout_weight="1"
                    android:layout_height="200dp"
                    card_view:cardCornerRadius="4dp"
                    android:layout_marginLeft="3dp"
                    android:layout_marginBottom="3dp"
                    android:layout_marginRight="3dp"
                    android:layout_marginTop="6dp">

                    <ImageView
                        android:id="@+id/img4"
                        android:layout_width="match_parent"
                        android:layout_height="150dp"
                        android:scaleType="centerCrop" />
                    <TextView
                        android:layout_weight="1"
                        android:layout_height="50dp"
                        android:layout_width="match_parent"
                        android:text="@string/s4"
                        android:gravity="top"
                        android:paddingLeft="15dp"
                        android:layout_gravity="bottom"
                        android:textColor="@color/gris"
                        android:textStyle="bold"
                        android:textSize="16dp"
                        android:background="@color/veig"/>

                </android.support.v7.widget.CardView>
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="207dp">

                <android.support.v7.widget.CardView
                    xmlns:card_view="http://schemas.android.com/apk/res-auto"
                    android:id="@+id/card_p5"
                    android:layout_weight="1"
                    android:layout_height="200dp"
                    card_view:cardCornerRadius="4dp"
                    android:layout_marginLeft="3dp"
                    android:layout_marginBottom="3dp"
                    android:layout_marginRight="3dp"
                    android:layout_marginTop="6dp">

                    <ImageView
                        android:id="@+id/img5"
                        android:layout_width="match_parent"
                        android:layout_height="150dp"
                        android:scaleType="centerCrop" />
                    <TextView
                        android:layout_weight="1"
                        android:layout_height="50dp"
                        android:layout_width="match_parent"
                        android:text="@string/s5"
                        android:gravity="top"
                        android:paddingLeft="15dp"
                        android:layout_gravity="bottom"
                        android:textColor="@color/gris"
                        android:textStyle="bold"
                        android:textSize="16dp"
                        android:background="@color/veig"/>

                </android.support.v7.widget.CardView>
                <android.support.v7.widget.CardView
                    xmlns:card_view="http://schemas.android.com/apk/res-auto"
                    android:id="@+id/card_p6"
                    android:layout_weight="1"
                    android:layout_height="200dp"
                    card_view:cardCornerRadius="4dp"
                    android:layout_marginLeft="3dp"
                    android:layout_marginBottom="3dp"
                    android:layout_marginRight="3dp"
                    android:layout_marginTop="6dp">

                    <ImageView
                        android:id="@+id/img6"
                        android:layout_width="match_parent"
                        android:layout_height="150dp"
                        android:scaleType="centerCrop" />
                    <TextView
                        android:layout_weight="1"
                        android:layout_height="50dp"
                        android:layout_width="match_parent"
                        android:text="@string/s6"
                        android:gravity="top"
                        android:paddingLeft="15dp"
                        android:layout_gravity="bottom"
                        android:textColor="@color/gris"
                        android:textStyle="bold"
                        android:textSize="16dp"
                        android:background="@color/veig"/>

                </android.support.v7.widget.CardView>
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="207dp">

                <android.support.v7.widget.CardView
                    xmlns:card_view="http://schemas.android.com/apk/res-auto"
                    android:id="@+id/card_p7"
                    android:layout_weight="1"
                    android:layout_height="200dp"
                    card_view:cardCornerRadius="4dp"
                    android:layout_marginLeft="3dp"
                    android:layout_marginBottom="3dp"
                    android:layout_marginRight="3dp"
                    android:layout_marginTop="6dp">

                    <ImageView
                        android:id="@+id/img7"
                        android:layout_width="match_parent"
                        android:layout_height="150dp"
                        android:scaleType="centerCrop" />
                    <TextView
                        android:layout_weight="1"
                        android:layout_height="50dp"
                        android:layout_width="match_parent"
                        android:text="@string/s7"
                        android:gravity="top"
                        android:paddingLeft="15dp"
                        android:layout_gravity="bottom"
                        android:textColor="@color/gris"
                        android:textStyle="bold"
                        android:textSize="16dp"
                        android:background="@color/veig"/>

                </android.support.v7.widget.CardView>
                <android.support.v7.widget.CardView
                    xmlns:card_view="http://schemas.android.com/apk/res-auto"
                    android:id="@+id/card_p8"
                    android:layout_weight="1"
                    android:layout_height="200dp"
                    card_view:cardCornerRadius="4dp"
                    android:layout_marginLeft="3dp"
                    android:layout_marginBottom="3dp"
                    android:layout_marginRight="3dp"
                    android:layout_marginTop="6dp">

                    <ImageView
                        android:id="@+id/img8"
                        android:layout_width="match_parent"
                        android:layout_height="150dp"
                        android:scaleType="centerCrop"/>
                    <TextView
                        android:layout_weight="1"
                        android:layout_height="50dp"
                        android:layout_width="match_parent"
                        android:text="@string/s8"
                        android:gravity="top"
                        android:paddingLeft="15dp"
                        android:layout_gravity="bottom"
                        android:textColor="@color/gris"
                        android:textStyle="bold"
                        android:textSize="16dp"
                        android:background="@color/veig"/>

                </android.support.v7.widget.CardView>
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="212dp">

                <android.support.v7.widget.CardView
                    xmlns:card_view="http://schemas.android.com/apk/res-auto"
                    android:id="@+id/card_p9"
                    android:layout_weight="1"
                    android:layout_height="200dp"
                    card_view:cardCornerRadius="4dp"
                    android:layout_marginLeft="3dp"
                    android:layout_marginBottom="3dp"
                    android:layout_marginRight="3dp"
                    android:layout_marginTop="6dp">

                    <ImageView
                        android:id="@+id/img9"
                        android:layout_width="match_parent"
                        android:layout_height="150dp"
                        android:scaleType="centerCrop" />
                    <TextView
                        android:layout_weight="1"
                        android:layout_height="50dp"
                        android:layout_width="match_parent"
                        android:text="@string/s9"
                        android:gravity="top"
                        android:paddingLeft="15dp"
                        android:layout_gravity="bottom"
                        android:textColor="@color/gris"
                        android:textStyle="bold"
                        android:textSize="16dp"
                        android:background="@color/veig"/>

                </android.support.v7.widget.CardView>
                <android.support.v7.widget.CardView
                    xmlns:card_view="http://schemas.android.com/apk/res-auto"
                    android:id="@+id/card_p10"
                    android:layout_weight="1"
                    android:layout_height="200dp"
                    card_view:cardCornerRadius="4dp"
                    android:layout_marginLeft="3dp"
                    android:layout_marginBottom="3dp"
                    android:layout_marginRight="3dp"
                    android:layout_marginTop="6dp">

                    <ImageView
                        android:id="@+id/img10"
                        android:layout_width="match_parent"
                        android:layout_height="150dp"
                        android:scaleType="centerCrop" />
                    <TextView
                        android:layout_weight="1"
                        android:layout_height="50dp"
                        android:layout_width="match_parent"
                        android:text="@string/s10"
                        android:gravity="top"
                        android:paddingLeft="15dp"
                        android:layout_gravity="bottom"
                        android:textColor="@color/gris"
                        android:textStyle="bold"
                        android:textSize="16dp"
                        android:background="@color/veig"/>

                </android.support.v7.widget.CardView>
            </TableRow>
        </LinearLayout>
    </ScrollView>

</LinearLayout>